# legalops2

./: app.py  pyproject.toml  requirements.txt  run.sh
src/azure/: blob_storage.py
src/controllers/: word_pluging.py
src/database/: mongo_db.py
src/embeddings/: vogayeai.py
src/prompts/: contract_review.txt  extract_legal_clause.txt  review_legal_clause.txt
src/retrievers/: mongodb_retriever.py  retriever_general.py
src/splitter/: spacy_splitter.py
src/utils/: utils_func.py
tests/integration/rag/: test_rag.py
tests/resources/: clauses.txt  clauses1.txt  input_para.json  test.json  test1.json
